PROTOCOL.md: one document for every rule, tagged by whether a gate checks it
Consolidates rules that lived in code comments, commit messages, task notes
and memory. 213 lines, six sections: what may reach a table, how a cell is
measured, how a comparison is kept fair, what may be said about a number, how
the checkers themselves must behave, and how work is queued.

Every rule carries GATE with the check name, or REMEMBERED. That tag is the
point. Remembering has failed here at least four times: 20 canonical rows sat
on dev builds after a campaign meant to put everything on a release; three
fairness defects surfaced in one afternoon and all three favoured us; a queue
script that omitted BENCH_SPARSE_SOURCE wrote 94 sparse rows against a
synthetic corpus with no ground truth; and the paper asserted N=5 globally
while printing rows built from three and four passes.

The tags are honest rather than flattering. Many read "GATE ... for the lane
rows; REMEMBERED for the overlays T4 and T5 actually print", which is the real
state and the enforcement backlog in one line.

AND IT IMMEDIATELY FOUND A BUG I SHIPPED HOURS EARLIER. Section 3 flags that
_total_envelope's mem_split parse was stale: the runner now stamps
"full+client" for the new full-cap envelope, float() rejects it, and the
SERVER_MEM_FRACTION_DEFAULT = 0.75 fallback would have reported 1.33x the true
envelope on every served row of the re-campaign, failing compliant cells.

Fixed here. "full+client" means the server got the whole tier cap and the
driver its own budget, so srv_cap already IS the envelope and dividing
inflates it. Verified both shapes: full+client 32g cap gives 32g, legacy 0.75
gives 42.67g.

A document assembled from the code, on the day the code changed, catching a
change the code had not finished propagating. That is the argument for having
it.

Gates: fairness 0 failures.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01E2Ytwsz